--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,45 @@
 *.exe
 *.class
+
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+package.json
+package-lock.json
+logo.svg
+logo192.png
+logo512.png
+reportWebVitals.js
+favicon.ico
+setupTests.js
+robots.txt
+manifest.json
+.env
+App.css
+App.test.js
+index.css
+index.js
+# production
+/build
+AWT/exp8/mongo_reg/node_modules
+AWT/exp7/loginpage/node_modules
+AWT/exp6/homepage/node_modules
+AWT/exp9/node_modules
+AWT/exp10/node_modules
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
